Reworked example